# checksum-check

./: LICENSE  README.md  index.html  package-lock.json  package.json  run-tests.bat  tailwind.config.js  tsconfig.json  vitest.config.ts
.github/workflows/: test.yml
src/: App.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/tests/: integration_test.rs
src/tests/: App.test.tsx  file-formats.test.ts  setup.ts  utils.test.ts
